讀取Note顯示出來

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="to_do">To do</string>
     <string name="enter_note">Enter a note...</string>
     <string name="save">Save</string>
+    <string name="date">8 Jan 2019</string>
 </resources>
